--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 <body>
 
-    <header class="header">
+    <header class="page-header">
         <div class="container">
             <nav class="nav-style">
                 <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
                 <ul class="nav-list">
                     <li>
-                        <a class="nav-link" href="./index.html">Studio</a>
+                        <a class="nav-link current" href="./index.html">Studio</a>
                     </li>
                     <li>
                         <a class="nav-link" href="">Portfolio</a>
@@ -61,6 +61,11 @@
                 <h2 class="visually-hidden">Our advantages</h2>
                 <ul class="advantages-list">
                     <li class="advantages-item">
+                        <div class="advantages-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-title">Strategy</h3>
                         <p class="advantages-text">
                             Our goal is to identify the business
@@ -68,6 +73,11 @@
                         </p>
                     </li>
                     <li class="advantages-item">
+                        <div class="advantages-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-title">Punctuality</h3>
                         <p class="advantages-text">
                             Bring the key message to the brand's audience for the best price within the shortest
@@ -76,6 +86,11 @@
                         </p>
                     </li>
                     <li class="advantages-item">
+                        <div class="advantages-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-title">Diligence</h3>
                         <p class="advantages-text">
                             Research and confirm brands that present the strongest digital growth opportunities and
@@ -84,6 +99,11 @@
                         </p>
                     </li>
                     <li class="advantages-item">
+                        <div class="advantages-icon-box">
+                            <svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="advantages-title">Technologies</h3>
                         <p class="advantages-text">
                             Design practice focused on digital experiences. We bring forth a deep passion for
@@ -102,6 +122,28 @@
                         <div class="team-box">
                             <h3 class="team-titles">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
+                            <ul class="team-social-list">
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -109,6 +151,27 @@
                         <div class="team-box">
                             <h3 class="team-titles">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
+                            <ul class="team-social-list">
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
                         </div>
                     </li>
                     <li class="team-item">
@@ -116,6 +179,27 @@
                         <div class="team-box">
                             <h3 class="team-titles">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
+                            <ul class="team-social-list">
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
                         </div>
                     </li>
                     <li class="team-item">
@@ -123,6 +207,27 @@
                         <div class="team-box">
                             <h3 class="team-titles">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
+                            <ul class="team-social-list">
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a></li>
+                                <li><a href="#" target="_blank" class="team-social-link">
+                                        <svg class="team-social-icons" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a></li>
                         </div>
                     </li>
                 </ul>
