--- a/index.html
+++ b/index.html
@@ -238,45 +238,96 @@
                 <h2 class="section-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/BankApp.jpg" alt="Banking App" width="360" height="300">
+                        <div class="portfolio-box-image">
+                            <img src="./images/BankApp.jpg" alt="Banking App" width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Banking App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
-
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Cashless.jpg" alt="Cashless Payment" width="360" height="300">
+                        <div class="portfolio-box-image">
+                            <img src="./images/Cashless.jpg" alt="Cashless Payment" width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Cashless Payment</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Meditation.jpg" alt="Meditation App" width="360" height="300">
+                        <div class="portfolio-box-image">
+                            <img src="./images/Meditation.jpg" alt="Meditation App" width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Meditation App</h3>
                             <p class="portfolio-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" height="300">
+                        <div class="portfolio-box-image">
+                            <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Taxi Service</h3>
                             <p class="portfolio-text">Marketing</p>
                         </div>
-
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/ScreenIll.jpg" alt="Screen Illustrations" width="360" height="300">
+                        <div class="portfolio-box-image">
+                            <img src="./images/ScreenIll.jpg" alt="Screen Illustrations" width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Screen Illustrations</h3>
                             <p class="portfolio-text">Design</p>
                         </div>
-
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Courses.jpg" alt="Online Courses" width="360" height="300">
+                        <div class="portfolio-box-image">
+                            <img src="./images/Courses.jpg" alt="Online Courses" width="360" height="300">
+                            <div class="overlay">
+                                <p class="overlay-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App
+                                </p>
+                            </div>
+                        </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Online Courses</h3>
                             <p class="portfolio-text">Marketing</p>
@@ -289,9 +340,37 @@
 
     <footer class="footer-background">
         <div class="container">
-            <a class="logo-footer" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+            <div>
+                <a class="logo-footer" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with digital marketing
+                    & growth solutions.
+                </p>
+            </div>
+            <div class="footer-social">
+                <p class="footer-social-text">Social media</p>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item"><a href="#" target="_blank" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a></li>
+                    <li class="footer-social-item"><a href="#" target="_blank" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="footer-social-item"><a href="#" target="_blank" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a></li>
+                    <li class="footer-social-item"><a href="#" target="_blank" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
+            </div>
         </div>
     </footer>
 
