--- a/index.html
+++ b/index.html
@@ -123,26 +123,34 @@
                             <h3 class="team-titles">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
                             <ul class="team-social-list">
-                                <li><a href="#" target="_blank" class="team-social-link">
+                                <li class="team-social-item">
+                                    <a href="#" target="_blank" class="team-social-link">
                                         <svg class="team-social-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
-                                    </a></li>
-                                <li><a href="#" target="_blank" class="team-social-link">
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" target="_blank" class="team-social-link">
                                         <svg class="team-social-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
-                                    </a></li>
-                                <li><a href="#" target="_blank" class="team-social-link">
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" target="_blank" class="team-social-link">
                                         <svg class="team-social-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
-                                    </a></li>
-                                <li><a href="#" target="_blank" class="team-social-link">
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a href="#" target="_blank" class="team-social-link">
                                         <svg class="team-social-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
-                                    </a></li>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -172,6 +180,7 @@
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -200,6 +209,7 @@
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-item">
@@ -228,6 +238,7 @@
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a></li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -240,13 +251,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-box-image">
                             <img src="./images/BankApp.jpg" alt="Banking App" width="360" height="300">
-                            <div class="overlay">
-                                <p class="overlay-text">
-                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App
-                                </p>
-                            </div>
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Banking App</h3>
@@ -256,13 +265,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-box-image">
                             <img src="./images/Cashless.jpg" alt="Cashless Payment" width="360" height="300">
-                            <div class="overlay">
-                                <p class="overlay-text">
-                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App
-                                </p>
-                            </div>
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Cashless Payment</h3>
@@ -272,13 +279,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-box-image">
                             <img src="./images/Meditation.jpg" alt="Meditation App" width="360" height="300">
-                            <div class="overlay">
-                                <p class="overlay-text">
-                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App
-                                </p>
-                            </div>
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Meditation App</h3>
@@ -288,13 +293,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-box-image">
                             <img src="./images/Taxi.jpg" alt="Taxi Service" width="360" height="300">
-                            <div class="overlay">
-                                <p class="overlay-text">
-                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App
-                                </p>
-                            </div>
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Taxi Service</h3>
@@ -304,13 +307,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-box-image">
                             <img src="./images/ScreenIll.jpg" alt="Screen Illustrations" width="360" height="300">
-                            <div class="overlay">
-                                <p class="overlay-text">
-                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App
-                                </p>
-                            </div>
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Screen Illustrations</h3>
@@ -320,13 +321,11 @@
                     <li class="portfolio-item">
                         <div class="portfolio-box-image">
                             <img src="./images/Courses.jpg" alt="Online Courses" width="360" height="300">
-                            <div class="overlay">
-                                <p class="overlay-text">
-                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                                    Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                    Cloud Storage App
-                                </p>
-                            </div>
+                            <p class="overlay">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                                Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                Cloud Storage App
+                            </p>
                         </div>
                         <div class="portfolio-box">
                             <h3 class="portfolio-titles">Online Courses</h3>
@@ -340,7 +339,7 @@
 
     <footer class="footer-background">
         <div class="container">
-            <div>
+            <div class="footer-logo-box">
                 <a class="logo-footer" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
                 <p class="footer-text">
                     Increase the flow of customers and sales for your business with digital marketing
@@ -370,6 +369,7 @@
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a></li>
+                </ul>
             </div>
         </div>
     </footer>
